[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openvr/scenes/ovr_first_person.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/player.gd" type="Script" id=3]
[ext_resource path="res://scenes/loading/Loading_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://misc/effects/FadeToBlack.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/vr-common/functions/Function_Direct_movement.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/vr-common/functions/Function_Teleport.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/vr-common/functions/Function_pointer.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/vr-common/misc/VR_Common_Shader_Cache.tscn" type="PackedScene" id=9]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="FadeToBlack" parent="." instance=ExtResource( 5 )]

[node name="OVRFirstPerson" parent="." instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="vr_common_shader_cache" parent="OVRFirstPerson/ARVRCamera/shader_cache" index="5" instance=ExtResource( 9 )]

[node name="Function_Teleport" parent="OVRFirstPerson/Left_Hand" index="1" instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 1048574
enabled = false
camera = NodePath("../../ARVRCamera")

[node name="Function_pointer" parent="OVRFirstPerson/Left_Hand" index="2" instance=ExtResource( 8 )]
enabled = false
collision_mask = 1048574

[node name="Function_Direct_movement" parent="OVRFirstPerson/Right_Hand" index="1" instance=ExtResource( 6 )]
enabled = false
camera = NodePath("../../ARVRCamera")

[node name="Function_pointer" parent="OVRFirstPerson/Right_Hand" index="2" instance=ExtResource( 8 )]
enabled = false
collision_mask = 1048574

[node name="Loading_scene" parent="." instance=ExtResource( 4 )]

[node name="World_scene" type="Spatial" parent="."]
visible = false
[connection signal="finished_fading" from="FadeToBlack" to="." method="_on_FadeToBlack_finished_fading"]
[connection signal="button_pressed" from="OVRFirstPerson/Left_Hand" to="OVRFirstPerson" method="_on_Left_Hand_button_pressed"]
[connection signal="pointer_moved" from="OVRFirstPerson/Left_Hand/Function_pointer" to="OVRFirstPerson" method="_on_Function_pointer_pointer_moved"]
[connection signal="pointer_pressed" from="OVRFirstPerson/Left_Hand/Function_pointer" to="OVRFirstPerson" method="_on_Function_pointer_pointer_pressed"]
[connection signal="pointer_released" from="OVRFirstPerson/Left_Hand/Function_pointer" to="OVRFirstPerson" method="_on_Function_pointer_pointer_released"]
[connection signal="button_pressed" from="OVRFirstPerson/Right_Hand" to="OVRFirstPerson" method="_on_Right_Hand_button_pressed"]
[connection signal="pointer_moved" from="OVRFirstPerson/Right_Hand/Function_pointer" to="OVRFirstPerson" method="_on_Function_pointer_pointer_moved"]
[connection signal="pointer_pressed" from="OVRFirstPerson/Right_Hand/Function_pointer" to="OVRFirstPerson" method="_on_Function_pointer_pointer_pressed"]
[connection signal="pointer_released" from="OVRFirstPerson/Right_Hand/Function_pointer" to="OVRFirstPerson" method="_on_Function_pointer_pointer_released"]

[editable path="OVRFirstPerson"]
